# thetower.lol

./: .flake8  .gitignore  .gitmodules  .isort.cfg  README.md  config.json  pyproject.toml  reposition.py  requirements.txt  setup.py  sitecustomize.py  update_towerbcs.py
.github/: copilot-instructions.md
.github/copilot/: discord.md  docs.md  errors.md  index.md  structure.md  style.md
.github/prompts/: cogreview.prompt.md
.streamlit/: config.toml
components/: about.py  breakdown.py  codebase_status.py  comparison.py  counts.py  duplicate_tournaments.py  fallen_defenders.py  git_status.py  live_bracket.py  live_results.py  live_score.py  namechangers.py  overview.py  pages.py  placement_analysis.py  player.py  results.py  search.py  service_status.py  sus_overview.py  top_scores.py  util.py  various.py  winners.py
components/live/: bcs.py  bracket_analysis.py  common.py  data_ops.py  live_bracket.py  live_bracket_analysis.py  live_placement_analysis.py  live_progress.py  live_results.py  live_score.py  ui_components.py
discord_bot/discord_bot/: add_roles.py  bot.py  const.py  remove_nicknames.py  util.py  validate_id.py  validation_bot.py
docs/: PRE_MIGRATION_MODEL_REFERENCE.md  bot-design-spec.md  bot-todo.md  cog_design.md  private_cog_deployment.md  supervisor_worker.md
fish_bot/: setup.py
fish_bot/fish_bot/: __init__.py  basecog.py  bot.py  config.json  const.py  exceptions.py  settings.py  util.py
fish_bot/fish_bot/cogs/: battle_conditions.py  battleconditions.py  commandpermissioneditor.py  gitmanagement.py  guild_advertise.py  known_players.py  main.py  member_advertise.py  member_tracker.py  role_cache.py  role_tracker.py  service_control.py  servicecontrol.py  tourney_management.py  tourney_role_supervisor.py  tourney_roles.py  tourney_stats.py  tourneymanagement.py  unified_advertise.py  validation.py  verification.py
fish_bot/fish_bot/utils/: __init__.py  cogautoreload.py  cogloader.py  cogmanager.py  command_type_manager.py  configmanager.py  data_management.py  decorators.py  filemonitor.py  memory_utils.py  permission_manager.py
scripts/: check_pypi_updates.py  convert_csv_to_gz.py  fix_sus_ban_conflicts.py  manage_bytecode.py  migrate_live_data.py  prune_completed_snapshots.py  setup_private_package.py  validate_archive_pages.py
scripts/templates/: sitecustomize.py
src/thetower/: __init__.py
src/thetower/backend/: analyze_shunned.py  env_config.py  manage.py  zendesk_utils.py
src/thetower/backend/backup/: backup_log.py  db_backup.py  r2_client.py  service.py  tar_backup.py
src/thetower/backend/sus/: admin.py  api_views.py  apps.py  backends.py  models.py  serializers.py  user_admin.py  utils.py
src/thetower/backend/sus/management/: __init__.py
src/thetower/backend/sus/migrations/: 0001_initial.py  0004_historicalsusperson_banned_susperson_banned_and_more.py  0012_historicalsusperson_created_and_more.py  0013_populate_create_modified_sus.py  0017_historicalsusperson_shunned_susperson_shunned_and_more.py  0021_historicalsusperson_api_ban_and_more.py  (+10 more)
src/thetower/backend/tourney_results/: admin.py  apps.py  archive_utils.py  constants.py  data.py  formatting.py  get_live_results.py  get_results.py  league_rules.py  models.py  overview_cache.py  shun_config.py  tourney_utils.py  views.py
src/thetower/backend/towerdb/: asgi.py  settings.py  urls.py  wsgi.py
src/thetower/bot/: __init__.py  basecog.py  bot.py  exceptions.py  util.py
src/thetower/bot/cogs/: battle_conditions.py  git_management.py  known_players.py  role_cache.py  service_control.py  tourney_management.py  tourney_role_supervisor.py  tourney_roles.py  tourney_stats.py  unified_advertise.py  validation.py  verification.py
src/thetower/bot/ui/: context.py  settings_views.py
src/thetower/bot/utils/: __init__.py  cogmanager.py  command_helpers.py  command_type_manager.py  configmanager.py  data_management.py  decorators.py  filemonitor.py  log_context.py  memory_utils.py  permission_manager.py  task_tracker.py
src/thetower/bot_v2/: __init__.py  bot.py  config.py
src/thetower/bot_v2/cogs/: ping.py
src/thetower/bot_v2/managers/: __init__.py  command_type.py  config.py  permission.py
src/thetower/scripts/: __init__.py  cleanup_cache.py  clone_roles.py  fix_moderation_record_timestamps.py  fix_sus_ban_conflicts.py  install_towerbcs.py  migrate_sus_to_moderation_records.py  reposition.py  setup_streamlit.py  test_migration_readiness.py
src/thetower/web/: maintenance.py  message.py  pages.py  request_logger.py  util.py
src/thetower/web/admin/: _access_log_common.py  access_log.py  access_log_stats.py  backup_status.py  bc_mismatch.py  codebase_status.py  debug.py  duplicate_tournaments.py  league_progression.py  maintenance_mode.py  migrations.py  multiple_moderation.py  package_updates.py  service_status.py  shun_admin.py  site_settings.py  sus_moderation.py
src/thetower/web/historical/: about.py  bc_filter.py  comparison.py  counts.py  median_history.py  namechangers.py  overview.py  player.py  regression_analysis.py  results.py  search.py  static_placement.py  winners.py
src/thetower/web/live/: bcs.py  data_ops.py  live_bracket.py  live_bracket_analysis.py  live_placement_analysis.py  live_progress.py  live_quantile_analysis.py  live_results.py  live_score.py  ui_components.py
tests/: conftest.py  test_basic.py
thetower/dtower/: analyze_shunned.py
thetower/dtower/status/: admin.py  models.py  urls.py  views.py
thetower/dtower/sus/: admin.py  models.py
thetower/dtower/sus/migrations/: 0013_populate_create_modified_sus.py  0018_delete_reviewed.py  0019_add_creator_code.py  0020_apikey.py
thetower/dtower/thetower/: settings.py  urls.py
thetower/dtower/tourney_results/: admin.py  constants.py  data.py  formatting.py  get_live_results.py  get_results.py  models.py  tourney_utils.py  views.py
thetower/dtower/tourney_results/import/: import_results.py
thetower/dtower/tourney_results/migrations/: 0037_alter_historicaltourneyresult_league_and_more.py  0038_rainperiod_historicalrainperiod.py  0039_add_recalc_queue_fields.py
(+112 files in other folders)
