[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "thetower"
dynamic = ["version"]
description = "The Tower tournament results and Discord bot system"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "TheDisasterFish"}
]
classifiers = [
    "Private :: thetower-project",
    "Private :: thetower.main",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Web interface
    "streamlit==1.47.0",
    "streamlit-extras==0.6.0",
    "requests==2.32.4",
    "pandas==2.3.1",
    "pydantic==2.11.7",
    "asyncstdlib==3.13.1",

    # Visualization
    "plotly==6.2.0",
    "statsmodels==0.14.5",
    "seaborn==0.13.2",

    # Django backend
    "Django==5.2.4",
    "django-extensions==4.1",
    "django-simple-history==3.10.1",
    "djangorestframework==3.16.0",
    "whitenoise==6.9.0",
    "django-colorfield==0.14.0",
    "django-axes==8.0.0",
    "pretty-html-table==0.9.16",
    "anthropic==0.58.2",
    "pyarrow==21.0.0",

    # Discord bot
    "discord.py @ git+https://github.com/Rapptz/discord.py.git@2d7e0614ad91e0544d0bf3f20f6ec615ca2b6d25",
    "psutil==7.0.0",

    # Utilities
    "tqdm==4.67.1",
    "natsort==8.4.0",
    "schedule==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "pytest-sugar==1.0.0",
    "black==26.1.0",
    "isort==7.0.0",
    "flake8==7.3.0",
    "autoflake==2.3.1",
]


bot = [
    "discord.py @ git+https://github.com/Rapptz/discord.py.git@2d7e0614ad91e0544d0bf3f20f6ec615ca2b6d25",
    "easyocr==1.7.2",
    "psutil==7.0.0",
    "Django==5.2.4",
    "djangorestframework==3.16.0",
]

web = [
    "streamlit==1.47.0",
    "streamlit-extras==0.6.0",
    "plotly==6.2.0",
    "pandas==2.3.1",
    "Django==5.2.4",
]

[project.urls]
Homepage = "https://thetower.lol"
Repository = "https://github.com/ndsimpson/thetower.lol"
Issues = "https://github.com/ndsimpson/thetower.lol/issues"

[project.scripts]
thetower-web = "thetower.web.pages:main"
thetower-bot = "thetower.bot.bot:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["thetower*"]
exclude = ["tests*", "*.tests*", "*.tests.*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml", "*.json"]

# Tool configurations consolidated
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "thetower.backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests", "thetower", "components"]
addopts = "-v --tb=short"

[tool.black]
line-length = 150
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3
known_first_party = ["thetower"]
src_paths = ["src"]
honor_noqa = true
remove_redundant_aliases = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 150
extend-ignore = ["E203", "E266", "E402", "E501", "W503", "DJ01"]
exclude = [
    ".git",
    "__pycache__",
    "*/__init__.py",
    "migrations",
    "*/migrations/*",
    "**/migrations/**",
    ".venv",
    "build",
    "dist"
]

[tool.autopep8]
max_line_length = 150
exclude = [
    "src/thetower/backend/tourney_results/import/import_results.py",
    "src/thetower/backend/tourney_results/import/get_results.py",
    "src/thetower/backend/tourney_results/import/get_limited_results.py"
]

[tool.setuptools_scm]
write_to = "src/thetower/_version.py"
